--- a/package.json
+++ b/package.json
@@ -10,15 +10,26 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.9.1",
+    "@react-native-firebase/analytics": "^16.0.0",
+    "@react-native-firebase/app": "^16.0.0",
+    "@react-native-firebase/auth": "^16.0.0",
+    "@react-native-firebase/firestore": "^16.0.0",
+    "@react-navigation/native": "^5.7.2",
+    "@react-navigation/stack": "^5.8.0",
     "axios": "^1.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-preset-env": "^1.7.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter": "^0.0.1-security.0",
+    "firebase": "^9.12.1",
     "react": "18.1.0",
     "react-hook-form": "^7.37.0",
     "react-native": "0.70.3",
+    "react-native-gesture-handler": "^1.7.0",
     "react-native-paper": "^4.12.5",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-reanimated": "^2.11.0",
+    "react-native-safe-area-context": "^3.1.1",
+    "react-native-screens": "^2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -40,6 +51,9 @@
   },
   "jest": {
     "preset": "react-native",
+    "moduleNameMapper": {
+      "\\.(png|jpg|ico|jpeg|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mock__/ImageMock.tsx"
+    },
     "moduleFileExtensions": [
       "ts",
       "tsx",
@@ -47,6 +61,12 @@
       "jsx",
       "json",
       "node"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(@react-native|react-native)).*/"
+    ],
+    "setupFiles": [
+      "<rootDir>/jest/setup.js"
     ]
   }
 }
