--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.5.3",
     "@react-native-firebase/analytics": "^16.0.0",
     "@react-native-firebase/app": "^16.0.0",
     "@react-native-firebase/auth": "^16.0.0",
@@ -20,16 +21,24 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-preset-env": "^1.7.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter": "^0.0.1-security.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "firebase": "^9.12.1",
+    "jest-environment-enzyme": "^7.1.2",
+    "jest-enzyme": "^7.1.2",
     "react": "18.1.0",
     "react-hook-form": "^7.37.0",
     "react-native": "0.70.3",
+    "react-native-date-picker": "^4.2.5",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-element-dropdown": "^2.3.1",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "^3.1.1",
-    "react-native-screens": "^2.9.0"
+    "react-native-screens": "^2.9.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -48,25 +57,5 @@
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.4"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleNameMapper": {
-      "\\.(png|jpg|ico|jpeg|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mock__/ImageMock.tsx"
-    },
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ],
-    "transformIgnorePatterns": [
-      "/node_modules/(?!(@react-native|react-native)).*/"
-    ],
-    "setupFiles": [
-      "<rootDir>/jest/setup.js"
-    ]
   }
 }
