--- a/package.json
+++ b/package.json
@@ -31,13 +31,17 @@
     "react-native-date-picker": "^4.2.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-element-dropdown": "^2.3.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-image-crop-picker": "^0.38.1",
+    "react-native-image-picker": "^4.10.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
