--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^6.5.3",
     "@react-native-firebase/analytics": "^16.0.0",
     "@react-native-firebase/app": "^16.0.0",
@@ -35,14 +36,20 @@
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-image-picker": "^4.10.0",
+    "react-native-keyboard": "^2.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.2",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
